--- a/appointment.html
+++ b/appointment.html
@@ -6,204 +6,7 @@
     <title>Appointment</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f8fa;
-            color: #333;
-            display: flex;
-            flex-direction: column; /* Make body a column flex container */
-            min-height: 100vh; /* Ensure the body takes the full viewport height */
-        }
-        .sidebar {
-            background-color: #fff;
-            color: #333;
-            width: 200px;
-            padding: 20px;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .sidebar h2 {
-            font-size: 40px;
-            margin-bottom: 20px;
-            animation: slideUp 0.5s ease-out forwards;
-            opacity: 0;
-            animation-delay: 0.1s;
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar a {
-            color: #333;
-            text-decoration: none;
-            display: block;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background 0.3s;
-            opacity: 0;
-            animation: slideUp 0.5s ease-out forwards;
-			font-size:18px;
-        }
-        .sidebar a:hover {
-            background-color: #eee;
-        }
-        .sidebar .active {
-            background-color: #555555;
-            color: #fff;
-        }
-        .sidebar li {
-            animation-delay: 0.2s;
-        }
-        .sidebar li:nth-child(2) {
-            animation-delay: 0.3s;
-        }
-        .sidebar li:nth-child(3) {
-            animation-delay: 0.4s;
-        }
-        .bottom-menu {
-            margin-top: auto;
-            padding-top: 20px;
-        }
-				.sidebar ul li {
-             margin-bottom: 20px;
-            }
-        .bottom-menu .logout a {
-            color: red;
-            background: none;
-        }
-        .container {
-            margin-left: 220px;
-            text-align: center;
-            padding: 50px 20px;
-            flex-grow: 1; /* Allow container to grow and fill the space */
-        }
-        .header {
-            margin-bottom: 50px;
-            opacity: 0;
-            animation: slideUp 0.5s ease-out forwards;
-            animation-delay: 0.6s;
-        }
-        @keyframes slideUp {
-            from {
-                transform: translateY(20px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-        .header h1 {
-            font-size: 60px;
-            margin: 10px 0;
-        }
-        .header p {
-            font-size: 20px;
-            color: #666;
-            margin: 10px 0 30px;
-        }
-        .header .buttons {
-            margin-top: 20px;
-        }
-        .header .buttons a {
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 25px;
-            margin: 0 10px;
-            font-size: 16px;
-        }
-        .header .buttons .contact {
-            background-color: #333;
-            color: #fff;
-        }
-        .header .buttons .read-more {
-            background-color: #f8f9fa;
-            color: #333;
-            border: 1px solid #333;
-        }
-        .header img {
-            width: 300px;
-            border-radius: 50%;
-            margin-top: 30px;
-        }
-        .services {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 50px;
-        }
-        .service {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 250px;
-            text-align: center;
-            opacity: 0;
-            animation: slideUp 0.5s ease-out forwards;
-        }
-        .service i {
-            font-size: 40px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .service h3 {
-            font-size: 20px;
-            margin-bottom: 10px;
-        }
-        .service p {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 20px;
-        }
-        .service a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-        }
-        .service:nth-child(1) {
-            animation-delay: 0.7s;
-        }
-        .service:nth-child(2) {
-            animation-delay: 0.8s;
-        }
-        .service:nth-child(3) {
-            animation-delay: 0.9s;
-        }
-		    .patient-attraction {
-        text-align: center;
-        margin-top: 50px;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-    }
-    .patient-attraction h2 {
-        font-size: 24px;
-        color: #333;
-        margin-bottom: 10px;
-    }
-    .patient-attraction p {
-        font-size: 16px;
-        color: #666;
-        margin-bottom: 20px;
-    }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            width: 100%;
-            clear: both;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="appointment.css">
 </head>
 <body>
     <div class="sidebar">
@@ -224,62 +27,50 @@
             <p>WELCOME ON OUR CLINIC SITE</p>
             <h1>Make an appointment</h1>
             <h2>Medical Services That You Can Trust.</h2>
-			<p><b>We Take Care Our Patient Health.</b></p>
+            <p><b>We Take Care Our Patient Health.</b></p>
             <div class="buttons">
                 <a class="contact" href="#">Contact us</a>
                 <a class="read-more" href="#">Read more</a>
             </div>
-            <img alt="Doctor with a stethoscope and a clipboard" height="300" src="female-doctor-VAZ9BMYX6U-w600.jpg" width="300" />
+            <img alt="Doctor with a stethoscope and a clipboard" src="female-doctor-VAZ9BMYX6U-w600.jpg" />
         </div>
         <div class="services">
             <div class="service">
                 <i class="fas fa-calendar-alt"></i>
                 <h3>Online appointment</h3>
                 <p>Maecenas malesuada ultricies. Curabitur et ligula ut molestie.</p>
-                <a href="book.html" style="color: black; text-decoration: none; margin-right: 10px;" 
-                onmouseover="this.style.textDecoration='underline'" 
-                onmouseout="this.style.textDecoration='none'">Make an appointment</a>
+                <a href="book.html">Make an appointment</a>
             </div>
             <div class="service">
                 <i class="fas fa-phone-alt"></i>
                 <h3>Emergency Case</h3>
                 <p>Maecenas malesuada ultricies curabitur.</p>
-                <a href="tel:+8801702103104" style="color: black; text-decoration: none; margin-right: 10px;" 
-                onmouseover="this.style.textDecoration='underline'" 
-                onmouseout="this.style.textDecoration='none'">+880 172 103 104</a>
+                <a href="tel:+8801702103104">+880 172 103 104</a>
                 <p>Contact us</p>
             </div>
             <div class="service">
                 <i class="fas fa-user-md"></i>
                 <h3>Our Doctors</h3>
                 <p>Maecenas malesuada elit lectus felis, malesuada ultricies.</p>
-                <a href="dashboard.html" style="color: black; text-decoration: none; margin-right: 10px;" 
-                onmouseover="this.style.textDecoration='underline'" 
-                onmouseout="this.style.textDecoration='none'">Doctors</a>
+                <a href="dashboard.html">Doctors</a>
             </div>
         </div>
-		
-             <!-- Added Patient Attraction Texts -->
         <div class="patient-attraction">
             <h2>Your Health, Our Priority</h2>
-                <p>At our facility, every heartbeat matters. With compassionate care and advanced treatment, we’re here for you—every step of the way.</p>
+            <p>At our facility, every heartbeat matters. With compassionate care and advanced treatment, we’re here for you—every step of the way.</p>
 
             <h2>Caring for You, Beyond the Cure</h2>
-                <p>Our commitment goes beyond medicine. We aim to provide a safe and nurturing environment where you can feel at ease, valued, and truly cared for.</p>
+            <p>Our commitment goes beyond medicine. We aim to provide a safe and nurturing environment where you can feel at ease, valued, and truly cared for.</p>
 
             <h2>Experience Exceptional Care</h2>
-                <p>With a focus on personalized treatment and compassionate support, we offer you and your loved ones the highest standard of care, because you deserve nothing less.</p>
+            <p>With a focus on personalized treatment and compassionate support, we offer you and your loved ones the highest standard of care, because you deserve nothing less.</p>
         </div>
     </div>
-       <footer>
+    <footer>
         <p>&copy; 2024 Med-Care Hospital. All rights reserved.</p>
         <p>
-            <a href="#" style="color: white; text-decoration: none; margin-right: 10px;" 
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Privacy Policy</a> |
-            <a href="#" style="color: white; text-decoration: none; margin-left: 10px;"
-            onmouseover="this.style.textDecoration='underline'"
-            onmouseout="this.style.textDecoration='none'">Terms of Service</a>
+            <a href="#" class="footer-link">Privacy Policy</a> |
+            <a href="#" class="footer-link">Terms of Service</a>
         </p>
     </footer>
 </body>
