--- a/care.html
+++ b/care.html
@@ -6,114 +6,7 @@
     <title>Patient Care Service</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-        .sidebar {
-            background-color: #fff;
-            color: #333;
-            width: 200px;
-            padding: 20px;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .sidebar h2 {
-            font-size: 40px;
-            margin-bottom: 20px;
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar a {
-            color: #333;
-            text-decoration: none;
-            display: block;
-            padding: 10px 15px;
-            border-radius: 10px;
-            transition: background 0.3s;
-            font-size: 20px;
-        }
-        .sidebar a:hover {
-            background-color: #eee;
-        }
-        .sidebar .active {
-            background-color: #555555;
-            color: #fff;
-        }
-        .bottom-menu {
-            margin-top: auto;
-            padding-top: 20px;
-        }
-        .sidebar ul li {
-             margin-bottom: 20px;
-            }
-        .bottom-menu .logout a {
-            color: red;
-            background: none;
-        }
-        .container {
-            margin-left: 220px;
-            padding: 50px 20px;
-            flex-grow: 1;
-        }
-        .header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .section-title {
-            color: #333;
-            font-size: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        .section-content {
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        .hidden {
-            display: none;
-        }
-		footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            width: 100%;
-            clear: both;
-            font-size: 14px;
-        }
-    </style>
+    <link rel="stylesheet" href="care.css">
 </head>
 <body>
 
@@ -124,8 +17,7 @@
             <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="appointment.html"><i class="fas fa-calendar-alt"></i> Appointment</a></li>
             <li><a href="department.html"><i class="fas fa-building"></i> Departments</a></li>
-			<li><a href="care.html" class="active"><i class="fas fa-clinic-medical"></i>Care Service</a></li>
-
+            <li><a href="care.html" class="active"><i class="fas fa-clinic-medical"></i>Care Service</a></li>
         </ul>
         <ul class="bottom-menu">
             <li><a href="patient.html"><i class="fas fa-user"></i> Patient</a></li>
@@ -135,14 +27,14 @@
 
     <div class="container">
         <div class="header">
-             Patient Care Service
+            Patient Care Service
         </div>
-    
+
         <div class="form-group">
             <label for="branch">Select Branch Name</label>
             <select id="branch">
                 <option>Select Branch Name</option>
-                <option>Med-Care Hospital,Dhaka</option>
+                <option>Med-Care Hospital, Dhaka</option>
             </select>
         </div>
         <div class="form-group">
@@ -168,9 +60,9 @@
             <div class="section-content">
                 Level-1<br>
                 Room: 106<br>
-                Contact: 9126625-6,9128835-7 Ext.120, 111<br>
+                Contact: 9126625-6, 9128835-7 Ext.120, 111<br>
                 Mobile: 01717-351631, 01763-287401, 01763-287402<br>
-                Time: 7:00 AM- 10:30 PM
+                Time: 7:00 AM - 10:30 PM
             </div>
         </div>
 
@@ -235,16 +127,13 @@
             </div>
         </div>
     </div>
-	    <!-- Footer -->
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Med-Care Hospital. All rights reserved.</p>
         <p>
-            <a href="#" style="color: white; text-decoration: none; margin-right: 10px;" 
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Privacy Policy</a> |
-            <a href="#" style="color: white; text-decoration: none; margin-left: 10px;"
-            onmouseover="this.style.textDecoration='underline'"
-            onmouseout="this.style.textDecoration='none'">Terms of Service</a>
+            <a href="#" class="footer-link">Privacy Policy</a> |
+            <a href="#" class="footer-link">Terms of Service</a>
         </p>
     </footer>
 
@@ -259,16 +148,8 @@
 
             // Show the selected section based on the dropdown value
             const selectedService = this.value;
-            if (selectedService === "information") {
-                document.getElementById("information").classList.remove("hidden");
-            } else if (selectedService === "billing") {
-                document.getElementById("billing").classList.remove("hidden");
-            } else if (selectedService === "admissionCounseling") {
-                document.getElementById("admissionCounseling").classList.remove("hidden");
-            } else if (selectedService === "customerService") {
-                document.getElementById("customerService").classList.remove("hidden");
-            } else if (selectedService === "canteen") {
-                document.getElementById("canteen").classList.remove("hidden");
+            if (selectedService) {
+                document.getElementById(selectedService).classList.remove("hidden");
             }
         });
     </script>
