--- a/dashboard.html
+++ b/dashboard.html
@@ -5,305 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Med-Care Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        body {
-             font-family: Arial, sans-serif;
-             background-color: #f4f4f4;
-             margin: 0;
-             padding: 0;
-             overflow-x: hidden;
-            }
-        .container {
-             display: flex;
-            }
-        .sidebar {
-             width: 250px;
-             background-color: #fff;
-             padding: 20px;
-             box-shadow: 2px 0 5px rgba(54, 53, 53, 0.1);
-             display: flex;
-             flex-direction: column;
-             height: 100vh;
-             justify-content: space-between;
-            }
-
-        .menu {
-             list-style: none;
-             padding: 0;
-            }
-
-       .bottom-menu {
-             list-style: none;
-             padding: 0;
-             margin-top: auto;
-            }
-
-        .sidebar ul li {
-             margin-bottom: 20px;
-            }
-
-        .sidebar ul li a {
-             text-decoration: none;
-             color: #333;
-             font-size: 18px;
-             display: flex;
-             align-items: center;
-            }
-
-        .sidebar ul li a i {
-             margin-right: 10px;
-            }
-
-        .sidebar ul li a.active {
-             background-color: #333;
-             color: #fff;
-             padding: 10px;
-             border-radius: 5px;
-            }
-
-        .sidebar ul li.logout a {
-             color: red;
-             font-weight: bold;
-             text-align: center;
-            }
-			
-			/* Base styling for sidebar items */
-        .nav-item {
-            padding: 10px 20px;
-            cursor: pointer;
-            color: #333;
-            text-decoration: none;
-            display: block;
-        }
-
-        /* Active class for dashboard */
-        .nav-item.active {
-            background-color: #ddd; /* Light grey color */
-            font-weight: bold;
-        }
-
-        /* Hover effect for all nav items */
-        .nav-item:hover {
-            background-color: #f0f0f0; /* Faint grey color on hover */
-        }
-		
-        .main-content {
-            flex: 1;
-            padding: 20px;
-            animation: flyUp 1s ease-out;
-        }
-        @keyframes flyUp {
-            from {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .header h1 {
-            font-size: 30px;
-        }
-        .header .search-bar {
-            display: flex;
-            align-items: center;
-        }
-        .header .search-bar input {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-        .cards {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        .card {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            flex: 1;
-            margin-right: 20px;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-        }
-        .card:last-child {
-            margin-right: 0;
-        }
-        .card h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-        .card p {
-            font-size: 24px;
-            margin: 0;
-        }
-        .card small {
-            display: block;
-            margin-top: 10px;
-            color: #888;
-        }
-        .doctor-info {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 20px;
-        }
-        .doctor-info .doctor-card {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            background-color: #fff;
-            opacity: 0;
-            transform: translateX(-50px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-        }
-        .doctor-info .doctor-card img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            margin-right: 15px;
-        }
-        .doctor-info .doctor-card .doctor-details {
-            display: flex;
-            flex-direction: column;
-        }
-        .statistics, .expense, .management, .schedule, .hospital-info {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-        }
-        .statistics h3, .expense h3, .management h3, .schedule h3, .hospital-info h3 {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-        .statistics .chart, .expense .chart {
-            height: 200px;
-            background-color: #f4f4f4;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-            color: #888;
-        }
-        .hospital-info ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .hospital-info ul li {
-            margin-bottom: 10px;
-        }
-        .hospital-info ul li i {
-            margin-right: 10px;
-            color: #888;
-        }
-		 .patient-management {
-            margin-top: 20px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .patient-management table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-        }
-        .patient-management table th, .patient-management table td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        .patient-management .search-box, .patient-management .filter-button {
-            display: inline-block;
-            margin-bottom: 10px;
-        }
-        .schedule .calendar {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        .schedule .calendar div {
-            background-color: #f4f4f4;
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-            flex: 1;
-            margin-right: 10px;
-        }
-        .schedule .calendar div.active {
-            background-color: #333;
-            color: #fff;
-        }
-        .schedule .calendar div:last-child {
-            margin-right: 0;
-        }
-        .schedule .events {
-            list-style: none;
-            padding: 0;
-        }
-        .schedule .events li {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        
-		.events li span:first-child {
-            text-align: left; /* Align the first span (event name) to the left */
-        }
-
-        .events li span:last-child {
-            text-align: right; /* Align the last span (doctor name) to the right */
-        }
-        .more-options {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .more-link {
-             display: inline-block;
-             padding: 10px 20px;
-             background-color: #333; /* Match this with your sidebar active color */
-             color: #fff;
-             text-decoration: none;
-             border-radius: 5px;
-             transition: background-color 0.3s ease;
-        }
-
-        .more-link:hover {
-              background-color: #555; /* Darker shade on hover */
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            font-size: 14px;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
     <div class="container">
