--- a/department.html
+++ b/department.html
@@ -3,134 +3,8 @@
 <head>
     <title>Find Your Doctor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        /* Existing CSS code here */
-		
-		        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-        .sidebar {
-            background-color: #fff;
-            color: #333;
-            width: 200px;
-            padding: 20px;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .sidebar h2 {
-            font-size: 40px;
-            margin-bottom: 20px;
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar a {
-            color: #333;
-            text-decoration: none;
-            display: block;
-            padding: 10px 15px;
-            border-radius: 10px;
-            transition: background 0.3s;
-            font-size: 20px;
-        }
-        .sidebar a:hover {
-            background-color: #eee;
-        }
-        .sidebar .active {
-            background-color: #555555;
-            color: #fff;
-        }
-        .bottom-menu {
-            margin-top: auto;
-            padding-top: 20px;
-        }
-        .sidebar ul li {
-            margin-bottom: 20px;
-        }
-        .bottom-menu .logout a {
-            color: red;
-            background: none;
-        }
-        .header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            font-size: 30px;
-            font-weight: bold;
-            margin-left: 220px;
-        }
-        /* Fly-up animation */
-        @keyframes flyUp {
-            0% {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        .container {
-            margin-left: 220px; /* Matches sidebar width */
-            padding: 20px;
-            flex: 1; /* Expands to fill available space */
-            min-height: calc(100vh - 100px); /* Adjust based on header/footer height */
-            animation: flyUp 0.8s ease-out;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            width: 100%;
-            font-size: 14px;
-        }
-		
-		
-        .doctor-details {
-            margin-top: 20px;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-        }
-        .doctor-details h4 {
-            margin: 0;
-            font-size: 30px;
-            color: #00bcd4;
-        }
-        .doctor-details p {
-            margin: 10px 0;
-            font-size: 18px;
-            color: #555;
-        }
-		
-    </style>
+    <link rel="stylesheet" href="department.css">
+
 </head>
 <body>
     <!-- Existing HTML code here -->
