--- a/index.html
+++ b/index.html
@@ -4,92 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Med-Care Index</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+<body>
 
     <!-- Top Header with Contact Info -->
-    <div style="background-color: #f8f8f8; padding: 10px 20px; text-align: right;">
-        <span style="color: #333; font-size: 14px;">Call Us: +880 123 456 7890 | Email: med-care@hospital.com</span>
+    <div class="top-header">
+        <span>Call Us: +880 123 456 7890 | Email: med-care@hospital.com</span>
     </div>
 
     <!-- Main Header with Logo and Navigation Links -->
-    <header style="background-color: #333; color: white; padding: 15px 20px; display: flex; align-items: center; justify-content: space-between;">
-        <div style="font-size: 24px; font-weight: bold;">
-            <span>Med-Care</span>
-        </div>
-        <nav>
-            <a href="login.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Dashboard</a>
-
-            <a href="login.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Patient</a>
-
-            <a href="login.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Department</a>
-
-            <a href="login.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Login</a>
-
-            <a href="register.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Register</a>
-
-            <a href="report.html" style="color: white; text-decoration: none; margin: 0 15px;"
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Report</a>
+    <header class="main-header">
+        <div class="logo">Med-Care</div>
+        <nav class="main-nav">
+            <a href="login.html">Dashboard</a>
+            <a href="login.html">Patient</a>
+            <a href="login.html">Department</a>
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+            <a href="report.html">Report</a>
         </nav>
     </header>
 
     <!-- Main Banner / Image Section -->
-    <section style="position: relative; background-color: #eee; padding: 60px 20px; text-align: center;">
-        <h1 style="font-size: 36px; color: #333;">Welcome to Our Med-Care Hospital</h1>
-        <img src="Life Science Hub Wales - Hospital illo.gif" alt="Hospital Image" style="max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 20px;">
-        <p style="font-size: 18px; color: #666; max-width: 600px; margin: auto;">
+    <section class="banner">
+        <h1>Welcome to Our Med-Care Hospital</h1>
+        <img src="Life Science Hub Wales - Hospital illo.gif" alt="Hospital Image">
+        <p>
             Providing the best healthcare services with experienced professionals and advanced technology. Your health is our priority.
         </p>
     </section>
 
     <!-- About Section -->
-    <section style="padding: 40px 20px; text-align: center;">
-        <h2 style="font-size: 30px; color: #333;">About Our Med-Care</h2>
-        <p style="font-size: 16px; color: #666; max-width: 800px; margin: auto;">
+    <section class="about">
+        <h2>About Our Med-Care</h2>
+        <p>
             Our hospital offers a wide range of medical services, from general consultations to specialized treatments. We are committed to providing quality care to all our patients.
         </p>
     </section>
 
     <!-- Services Section -->
-    <section style="background-color: #f9f9f9; padding: 40px 20px; text-align: center;">
-        <h2 style="font-size: 28px; color: #333;">Our Services</h2>
-        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;">
-            <div style="flex: 1 1 200px; padding: 20px; background-color: white; border: 1px solid #ddd;">
-                <h3 style="font-size: 20px; color: #333;">Outpatient Services</h3>
-                <p style="color: #666;">Comprehensive outpatient care for all your health needs.</p>
+    <section class="services">
+        <h2>Our Services</h2>
+        <div class="service-cards">
+            <div class="service-card">
+                <h3>Outpatient Services</h3>
+                <p>Comprehensive outpatient care for all your health needs.</p>
             </div>
-            <div style="flex: 1 1 200px; padding: 20px; background-color: white; border: 1px solid #ddd;">
-                <h3 style="font-size: 20px; color: #333;">Emergency Services</h3>
-                <p style="color: #666;">24/7 emergency services available for critical care.</p>
+            <div class="service-card">
+                <h3>Emergency Services</h3>
+                <p>24/7 emergency services available for critical care .</p>
             </div>
-            <div style="flex: 1 1 200px; padding: 20px; background-color: white; border: 1px solid #ddd;">
-                <h3 style="font-size: 20px; color: #333;">Specialized Departments</h3>
-                <p style="color: #666;">Experienced specialists across various medical fields.</p>
+            <div class="service-card">
+                <h3>Specialized Departments</h3>
+                <p>Experienced specialists across various medical fields.</p>
             </div>
         </div>
     </section>
 
     <!-- Footer Section -->
-    <footer style="background-color: #333; color: white; padding: 20px; text-align: center;">
-        <p style="margin: 0; font-size: 14px;">&copy; 2024 Med-Care Hospital. All rights reserved.</p>
-        <p style="margin: 5px 0;">
-            <a href="#" style="color: white; text-decoration: none; margin-right: 10px;" 
-            onmouseover="this.style.textDecoration='underline'" 
-            onmouseout="this.style.textDecoration='none'">Privacy Policy</a> |
-            <a href="#" style="color: white; text-decoration: none; margin-left: 10px;"
-            onmouseover="this.style.textDecoration='underline'"
-            onmouseout="this.style.textDecoration='none'">Terms of Service</a>
+    <footer class="footer">
+        <p>&copy; 2024 Med-Care Hospital. All rights reserved.</p>
+        <p>
+            <a href="#">Privacy Policy</a> |
+            <a href="#">Terms of Service</a>
         </p>
     </footer>
 
